@@ -1,4 +1,4 @@
 DIST reed-5.4.tar.gz 32414 RMD160 d1987fc347dc4dcc537112bec9a774a235ae9ffa SHA1 e8c43add662576590597c8989e06011a3e80e93f SHA256 226a057aa5db705e83b685207d635d0d3b983999f1e526e0768aa56b0e7c02a8
-EBUILD reed-5.4.ebuild 938 RMD160 c0a8cecad261aeb8dfbeddfc6628f453a22f2ab8 SHA1 ccb7d0b1848b96bcb96260e82aad75bf28ff0b18 SHA256 4a30dd71c158b432b1f6496d84708d611c901744953b470ebe5a26c37c202080
-MISC ChangeLog 1069 RMD160 c4ce9d792e5e43d8265068f20abbab1ffa8385fe SHA1 99b26fc8a0275cba8fc39c0eeb8af647cfaee950 SHA256 22a36775d9812a07925f51688b57e5b405d41eafe54cd1d838dd5c3cf42ff2e2
+EBUILD reed-5.4.ebuild 1041 RMD160 c8f3e170d80bc6ccccc6857de232f527e2ef69b3 SHA1 2f69c8c2b4053c9e960a2be0d3cb2ae68b518d07 SHA256 712ed3b2f4be09fadc1162913a0c05bf3272f1db4725a7dd5a4cfc2e8091d33c
+MISC ChangeLog 1213 RMD160 de2c8edfdd901f525e353883a87d924b8295ba07 SHA1 75bfd158a87a87694e149910279eda4e0343c6c0 SHA256 57d604194eaf1ea70a292ba5855f9f9873658de00e9285644ff781756d031f37
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
