@@ -1,11 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/reed/reed-5.4.ebuild,v 1.10 2009/01/27 08:34:17 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/reed/reed-5.4.ebuild,v 1.11 2009/01/27 09:11:18 pva Exp $
 
 inherit toolchain-funcs
 
 DESCRIPTION="This is a text pager (text file viewer), used to display etexts."
-HOMEPAGE="http://www.sacredchao.net/software/reed/index.shtml"
+# Homepage http://www.sacredchao.net/software/reed/index.shtml does not exist.
+HOMEPAGE="http://web.archive.org/web/20040217010815/www.sacredchao.net/software/reed/"
 SRC_URI="http://www.sacredchao.net/software/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
