@@ -1,6 +1,10 @@
 # ChangeLog for app-text/reed
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/reed/ChangeLog,v 1.9 2009/01/27 08:34:17 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/reed/ChangeLog,v 1.10 2009/01/27 09:11:18 pva Exp $
+
+  27 Jan 2009; Peter Volkov <pva@gentoo.org> reed-5.4.ebuild:
+  Update HOMEPAGE to point on webarchive.org since origianl does not
+  exist...
 
   27 Jan 2009; Peter Volkov <pva@gentoo.org> reed-5.4.ebuild:
   Respect LDFLAGS. Don't install wrap, as it collides with talkfilters, bug
